compiler/etac/tests/pa1/supplementary_outofbounds.eta
main(args: int[][]) {
    ok: int[] = "\x{110000}"; // error: largest Unicode char is 10FFFF
}
